added custom ResourcePath class